# mailgun-smtp-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cli.rs  email.rs  main.rs  recipients.rs  replace.rs
