[package]
name = "mailmeld"
version = "1.0.0"
authors = ["ChemicalLuck"]
edition = "2021"
description = "A simple mail-merging tool"
repository = "https://github.com/ChemicalLuck/mailmeld"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
csv = "1.3.0"
dotenv = "0.15.0"
indicatif = "0.17.7"
lettre = { version = "0.11.1", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }

[profile.release]
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "mailmeld"
path = "src/main.rs"
